@@ -2,8 +2,11 @@ dh-make-perl (0.60) UNRELEASED; urgency=low
 
   * fix MANIFEST file handling
   * use Test::DistManifest
+  * update META.yml/MANIFEST/Makefile.PL during build, commit them to
+    SVN
+  * use a passthrough Makefile.PL, we use special Module::Build stuff
 
- -- Ryan Niebur <ryanryan52@gmail.com>  Wed, 02 Sep 2009 21:54:48 -0700
+ -- Ryan Niebur <ryanryan52@gmail.com>  Wed, 02 Sep 2009 22:11:16 -0700
 
 dh-make-perl (0.59) unstable; urgency=low
 
